# pose_graph_optimization_for_SLAM

./: .clang-format  .editorconfig  .gitignore  README.md  noisy_odom_data.csv
icp_exploration/: helpers.py  icp.py
ros2_ws/: noisy_odom_data.csv  odom_data.csv
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/turtlebot4_description/share/ament_index/resource_index/package_run_dependencies/: turtlebot4_description
ros2_ws/install/turtlebot4_description/share/ament_index/resource_index/parent_prefix_path/: turtlebot4_description
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/cmake/: turtlebot4_descriptionConfig-version.cmake  turtlebot4_descriptionConfig.cmake
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/launch/: robot_description.launch.py
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/meshes/: camera_bracket.dae  oakd_lite.dae  oakd_pro.dae  rplidar.dae  shell.dae  shell_collision.dae  tower.dae  tower_sensor_plate.dae  tower_standoff.dae  weight_block.dae
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/urdf/lite/: turtlebot4.urdf.xacro
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/urdf/sensors/: camera_bracket.urdf.xacro  oakd.urdf.xacro  rplidar.urdf.xacro
ros2_ws/install/turtlebot4_description/share/turtlebot4_description/urdf/standard/: tower_sensor_plate.urdf.xacro  tower_standoff.urdf.xacro  turtlebot4.urdf.xacro  weight_block.urdf.xacro
ros2_ws/install/turtlebot4_gz_bringup/share/turtlebot4_gz_bringup/: local_setup.sh  package.sh
ros2_ws/install/turtlebot4_gz_gui_plugins/share/turtlebot4_gz_gui_plugins/: local_setup.sh  package.sh
ros2_ws/install/turtlebot4_gz_toolbox/share/turtlebot4_gz_toolbox/: package.sh
ros2_ws/install/turtlebot4_msgs/include/turtlebot4_msgs/turtlebot4_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  user_button.h  user_button.hpp  user_led.h  (+3 more)
ros2_ws/install/turtlebot4_msgs/share/turtlebot4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/turtlebot4_msgs/share/turtlebot4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  turtlebot4_msgsConfig-version.cmake  turtlebot4_msgsConfig.cmake
ros2_ws/install/turtlebot4_msgs/share/turtlebot4_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros2_ws/install/turtlebot4_msgs/share/turtlebot4_msgs/msg/: UserButton.idl  UserButton.json  UserButton.msg  UserDisplay.idl  UserDisplay.json  UserDisplay.msg  UserLed.idl  UserLed.json  UserLed.msg
ros2_ws/install/turtlebot4_navigation/share/turtlebot4_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/turtlebot4_navigation/share/turtlebot4_navigation/cmake/: turtlebot4_navigationConfig-version.cmake  turtlebot4_navigationConfig.cmake
ros2_ws/install/turtlebot4_navigation/share/turtlebot4_navigation/config/: localization.yaml  nav2.yaml  slam.yaml
ros2_ws/install/turtlebot4_navigation/share/turtlebot4_navigation/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros2_ws/install/turtlebot4_navigation/share/turtlebot4_navigation/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
ros2_ws/install/turtlebot4_navigation/share/turtlebot4_navigation/maps/: depot.pgm  depot.yaml  maze.pgm  maze.yaml  warehouse.pgm  warehouse.yaml
ros2_ws/install/turtlebot4_node/include/turtlebot4_node/: action.hpp  buttons.hpp  display.hpp  leds.hpp  service.hpp  turtlebot4.hpp  utils.hpp
ros2_ws/install/turtlebot4_node/lib/turtlebot4_node/: turtlebot4_node
ros2_ws/install/turtlebot4_node/share/turtlebot4_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/turtlebot4_node/share/turtlebot4_node/cmake/: ament_cmake_export_include_directories-extras.cmake  turtlebot4_nodeConfig-version.cmake  turtlebot4_nodeConfig.cmake
ros2_ws/install/turtlebot4_node/share/turtlebot4_node/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/turtlebot4_simulator/share/turtlebot4_simulator/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/data_collection/: CMakeLists.txt  package.xml
ros2_ws/src/data_collection/src/: data_collection_node.cpp  read_data.cpp
ros2_ws/src/icp/: CMakeLists.txt  package.xml
ros2_ws/src/icp/include/: icp.cpp  icp.h
ros2_ws/src/icp/src/: icp.cpp  lidar_htm_example.cpp
ros2_ws/src/pose_graph_exploration/: CMakeLists.txt  package.xml
ros2_ws/src/pose_graph_exploration/include/: pose_graph_header.cpp  pose_graph_header.h  pose_graph_structs.h
ros2_ws/src/pose_graph_exploration/src/: pose_graph.cpp  utils.cpp
ros2_ws/src/turtlebot4_gz_bringup/launch/: sim.launch.py
rosbags/drive_in_square/: metadata.yaml
src/: CMakeLists.txt  main.cpp  test_structs.cpp  utils.cpp  utils.hpp
src/include/: gn_helper.hpp  gn_optimizer.hpp  pose_graph.hpp  read_data.hpp  test_structs.hpp  utils.hpp
src/src/: gn_optimizer.cpp  main.cpp  optimizer.cpp  pose_graph.cpp  read_data.cpp  test_structs.cpp
src_py/: helper.py  odom.py  optimization.py  pose_graph.py  utils.py
visualization/: plot_odom.py  plot_scans.py
(+41 files in other folders)
