<?xml version="1.0"?>
<package format="3">
  <name>data_collection</name>
  <version>0.0.0</version>
  <description>Package for collecting lidar and odometry data for pose graph optimization development</description>

  <license>Apache 2.0</license>

  <maintainer email="mampane@olin.edu">Mo Ampane</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
